# DigitalSimSource

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
include/: ANDGate.h  BufforGate.h  Clock.h  Connector.h  File.h  Gate.h  Menu.h  Module.h  NOTGate.h  ORGate.h  State.h  XORGate.h
src/: ANDGate.cpp  Clock.cpp  Connector.cpp  File.cpp  Gate.cpp  Menu.cpp  Module.cpp  NOTGate.cpp  ORGate.cpp  XORGate.cpp
